<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="activity_multiplier">activity multiplier [1.0-2.0]</string>
    <string name="age">age</string>
    <string name="import_instructions">To import new foods from a file, edit /sdcard/MacroDroid/myfoods.txt keeping in mind that formatting matters!</string>
    <string name="export_instructions">Your foods will be exported to /sdcard/MacroDroid/myfoods.txt</string>
    <string name="app_name">MacroDroid</string>
    <string name="body_fat">body fat</string>
    <string name="gender">gender</string>
    <string name="weight">weight</string>
    <string name="height">height</string>
    <string name="carbs">carbs</string>
    <string name="cm">cm</string>
    <string name="deficit">deficit</string>
    <string name="fat">fat</string>
    <string name="grams">grams</string>
    <string name="grams_serving">grams/serving</string>
    <string name="g_per_lb_body">g/lb. body weight</string>
    <string name="hint">Touch the first or last day of month to navigate months.</string>
    <string name="in">in</string>
    <string name="kCal">kCal</string>
    <string name="kCal_serving">kCal/serving</string>
    <string name="kCal_day">kCal/day</string>
    <string name="kCal_g">kCal/g</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="max_deficit">max deficit</string>
    <string name="percentage_optional">% [optional]</string>
    <string name="percent_carbs">% carbs</string>
    <string name="percent_fat">% fat</string>
    <string name="protein">protein</string>
    <string name="remaining_carb_fat_split">remaining carb/fat split</string>
    <string name="servings_of">servings of</string>
    <string name="training_day_kCal">training day kCal</string>
    <string name="years">years</string>
    <string name="Add">Add</string>
    <string name="Add_Food">Add Food</string>
    <string name="Add_Food_Group">Add Food Group</string>
    <string name="BMR">BMR</string>
    <string name="Calculate">Calculate</string>
    <string name="Cancel">Cancel</string>
    <string name="Change_Day_Type">Change Day Type</string>
    <string name="Day_Type">Day Type</string>
    <string name="I_Know_Them">It\'s a UNIX system! I know this!</string>
    <string name="Import">Import</string>
    <string name="Import_From_File">Import From File</string>
    <string name="Macros">Macros</string>
    <string name="Macro_Conversions">Macro Conversions</string>
    <string name="Measurements">Measurements</string>
    <string name="My_Food_Groups">My Food Groups</string>
    <string name="My_Foods">My Foods</string>
    <string name="My_Macros">My Macros</string>
    <string name="My_Measurements">My Measurements</string>
    <string name="Name">Name</string>
    <string name="Number_of_Servings">Number of Servings</string>
    <string name="Photos">Photos</string>
    <string name="Rest_Day">Rest Day</string>
    <string name="RMR">RMR</string>
    <string name="Save">Save</string>
    <string name="Save_Foods">Save Foods</string>
    <string name="Save_Food_Group">Save Food Group</string>
    <string name="total_servings">total servings</string>
    <string name="Serving_Size">Serving Size</string>
    <string name="Set">Set</string>
    <string name="Todays_Foods">Today\'s Foods</string>
    <string name="Training_Day">Training Day</string>
    <string name="Weight">Weight</string>
    <string name="Your_macros_have_been_saved">Your macros have been saved!</string>
    <string name="day_detail_activity_no_foods_yet">You haven\'t added any foods yet!</string>
    <string name="main_activity_today">Today</string>
    <string name="main_activity_previous">Previous</string>
    <string name="main_activity_my_foods">My Foods</string>
    <string name="main_activity_my_macros">My Macros</string>
    <string name="main_activity_my_food_groups">My Food Groups</string>
    <string name="main_activity_settings">Settings/Info/FAQ</string>
    <string name="my_food_groups_total_kCal_label">total kCal</string>
    <string name="my_food_groups_total_protein_label">g protein,</string>
    <string name="my_food_groups_total_carbs_label">g carbs,</string>
    <string name="my_food_groups_total_fat_label">g fat</string>
    <string name="my_foods_list_item_kCal_label">kCal</string>
    <string name="my_foods_list_item_protein_label">g protein,</string>
    <string name="my_foods_list_item_carbs_label">g carbs,</string>
    <string name="my_foods_list_item_fat_label">g fat</string>
    <string name="my_macros_calculate">Calculate my macros!</string>
    <string name="my_macros_i_know">I know my macros!</string>
    <string name="my_macros_no_input">You have not inputted or calculated your macros.  Please select one of the buttons below to do so.</string>
    <string name="my_macros_training_kCal_day">training kCal/day</string>
    <string name="my_macros_rest_kCal_day">rest kCal/day</string>
    <string name="my_macros_deficit">deficit [kCal]</string>
    <string name="my_macros_protein">protein [g]</string>
    <string name="my_macros_carbs">carbs [g]</string>
    <string name="my_macros_fat">fat [g]</string>

</resources>