<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/My_Foods"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/BTN_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/Add" />

    <Button
        android:id="@+id/BTN_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/BTN_add"
        android:text="@string/Import" />

    <ListView
        android:id="@+id/LV_my_foods"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/BTN_add" />

</RelativeLayout>