<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top" >

    <TextView
        android:id="@+id/TV_day_detail_calories"
        style="@style/CenteredHeaderTV"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="1000/2000 kCal" />

    <LinearLayout
        android:id="@+id/LL_macro_labels"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_day_detail_calories"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/ThreeColumnCenteredTV"
            android:text="@string/protein" />

        <TextView
            style="@style/ThreeColumnCenteredTV"
            android:text="@string/carbs" />

        <TextView
            style="@style/ThreeColumnCenteredTV"
            android:text="@string/fat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_current_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_macro_labels"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TV_day_detail_current_protein"
            style="@style/ThreeColumnCenteredTV"
            android:text="50"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_day_detail_current_carbs"
            style="@style/ThreeColumnCenteredTV"
            android:text="50"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_day_detail_current_fat"
            style="@style/ThreeColumnCenteredTV"
            android:text="50"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_macro_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_current_data"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TV_day_detail_macro_protein"
            style="@style/ThreeColumnCenteredTV"
            android:text="of 250g" />

        <TextView
            android:id="@+id/TV_day_detail_macro_carbs"
            style="@style/ThreeColumnCenteredTV"
            android:text="of 250g" />

        <TextView
            android:id="@+id/TV_day_detail_macro_fat"
            style="@style/ThreeColumnCenteredTV"
            android:text="of 250g" />
    </LinearLayout>

    <TextView
        android:id="@+id/TV_todays_foods"
        style="@style/CenteredHeaderTV"
        android:layout_width="fill_parent"
        android:layout_below="@id/LL_macro_data"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Todays_Foods" />

    <ListView
        android:id="@+id/LV_day_detail_foods"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_todays_foods" >
    </ListView>

    <TextView
        android:id="@+id/TV_no_foods_yet"
        style="@style/CenteredHeaderTV"
        android:layout_width="fill_parent"
        android:layout_below="@id/TV_todays_foods"
        android:gravity="center"
        android:text="@string/day_detail_activity_no_foods_yet"
        android:visibility="gone" />

</RelativeLayout>